# SPLATRA

./: .gitignore  .vercelignore  README.md  pyproject.toml  vercel.json
.github/workflows/: ci.yml
apps/: plugin_api.py
docs/: REALTIME_EXPLAINER.md
rust/turbovec_rs/: Cargo.toml
rust/turbovec_rs/src/: lib.rs
scripts/: build_web.sh  demo_render.py  run_api.sh
src/atanor_core/: __init__.py
src/atanor_core/compression/: codec.py
src/atanor_core/deformation/: fourier.py
src/atanor_core/domain/: __init__.py  scene.py  sgf.py
src/atanor_core/generation/: bg.py  generator.py  image_lift.py  lgm.py  multiview.py  quant.py  text_to_3d.py  triposr.py
src/atanor_core/llm/: __init__.py  director.py  heuristic.py  ollama.py
src/atanor_core/mapping/: graph_mapper.py
src/atanor_core/ports/: __init__.py
src/atanor_core/state/: machine.py  rasterizer.py
src/atanor_core/verification/: psnr_gate.py
tests/: test_pipeline.py  test_scene.py
viewer/: index.html  studio.html
web/: index.html  vercel.json
