[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "atanor-hologram-core"
version = "0.1.0"
description = "Standalone 3D Gaussian hologram + generation engine, LLM-plugin ready"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.27", "pydantic>=2", "python-multipart>=0.0.9", "pillow>=10"]
gpu = ["torch>=2.1", "gsplat>=1.0"]
gen = [
    "torch>=2.1", "diffusers>=0.27", "transformers>=4.38", "accelerate>=0.28",
    "safetensors>=0.4", "huggingface_hub>=0.23", "einops>=0.7", "kiui>=0.2",
    "bitsandbytes>=0.43", "pillow>=10",
]
viz = ["umap-learn>=0.5"]
# Text/image->3D: Stable Diffusion (CPU tiny-sd / GPU sd-turbo) + rembg, and
# real multi-view (Zero123++ needs torchvision) carved into 3D.
sd = ["torch>=2.1", "torchvision>=0.16", "diffusers>=0.27", "accelerate>=0.28",
      "rembg>=2.0", "onnxruntime>=1.17", "pillow>=10"]
dev = ["pytest>=8", "pytest-timeout>=2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 60
